--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>tfs-parent</artifactId>
   <packaging>pom</packaging>
   <name>Team Foundation Server Plug-in parent</name>
-  <version>5.142.0</version>
+  <version>5.142.0-RSA</version>
   <properties>
     <!-- Version is required to be compatible with current Pipeline plugin dependencies -->
     <jenkins.version>1.642.3</jenkins.version>
